@@ -13,9 +13,11 @@ import java.net.HttpURLConnection;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
+import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.core.JsonProcessingException;
 
 
 @Service
@@ -32,10 +34,18 @@ public class RecommendationServiceImpl implements RecommendationService {
         if(recommendationsCache.containsKey(userId)){
             return recommendationsCache.get(userId);
         }
-        List<String> patternIds = new ArrayList<>(getRecommendedPatternsBasedOnInteractions(userId));
+        List<String> patternIds = getRecommendedPatternsBasedOnInteractions(userId);
+        
+        List<Recommendation.PatternRecommendation> recommendations = patternIds.stream()
+            .map(id -> new Recommendation.PatternRecommendation(
+                id,
+                "Default code snippet for " + id,
+                "Default explanation for " + id
+            ))
+            .collect(Collectors.toList());
 
-        Recommendation recommendation = new Recommendation(userId, patternIds);
-        recommendationsCache.put(userId,recommendation);
+        Recommendation recommendation = new Recommendation(userId, recommendations);
+        recommendationsCache.put(userId, recommendation);
         return recommendation;
     }
 
@@ -52,91 +62,135 @@ public class RecommendationServiceImpl implements RecommendationService {
     }
     @Override
     public Recommendation getGeminiRecommendations(String codeSnippet) {
-        String prompt = "Analyze the following code snippet and apply the most suitable design pattern:\n" +
+        String prompt = "Analyze the following project structure and code snippets to identify potential design patterns:\n" +
                 codeSnippet +
-                "\nIf a design pattern is applicable, provide the name of the design pattern, a modified code snippet that implements the identified design pattern and a brief explanation of why this pattern fits the code. Format your response in a JSON object with 'patternName', 'codeSnippet' and 'explanation' properties. If no design pattern is applicable, respond with 'No specific pattern identified'.";
-        String responseFromGemini =  getGeminiResponse(prompt);
-        return  mapToRecommendation(responseFromGemini);
-
+                "\nProvide the following in your response:\n" +
+                "1. Identified design patterns that could be applied\n" +
+                "2. Explanation of why each pattern is suitable\n" +
+                "3. Code examples showing how to implement these patterns\n" +
+                "4. Potential benefits and trade-offs of applying each pattern\n" +
+                "Format your response in a JSON object with 'patternName', 'codeSnippet', and 'explanation' properties.";
+        
+        String responseFromGemini = getGeminiResponse(prompt);
+        return mapToRecommendation(responseFromGemini);
     }
-    private Recommendation mapToRecommendation(String response){
+    private Recommendation mapToRecommendation(String response) {
         ObjectMapper objectMapper = new ObjectMapper();
-        try{
-            Map<String, String> map = objectMapper.readValue(response, new TypeReference<Map<String, String>>() {});
-            List<String> list = new ArrayList<>();
-            if (map.containsKey("patternName")){
-                list.add(map.get("patternName"));
+        try {
+            JsonNode rootNode = objectMapper.readTree(response);
+            List<Recommendation.PatternRecommendation> recommendations = new ArrayList<>();
+            
+            if (rootNode.has("designPatterns")) {
+                JsonNode patterns = rootNode.get("designPatterns");
+                for (JsonNode pattern : patterns) {
+                    recommendations.add(new Recommendation.PatternRecommendation(
+                        pattern.get("patternName").asText(),
+                        pattern.get("codeSnippet").asText(),
+                        pattern.get("explanation").asText()
+                    ));
+                }
             }
-            if (map.containsKey("codeSnippet")) {
-                list.add(map.get("codeSnippet"));
-            }
-            if (map.containsKey("explanation")) {
-                list.add(map.get("explanation"));
-            }
-            return new Recommendation("gemini", list);
-
-        }catch (Exception ex){
-            return new Recommendation("gemini", Collections.singletonList(response));
+            
+            return new Recommendation("gemini", recommendations);
+        } catch (Exception ex) {
+            return new Recommendation("error", Collections.singletonList(
+                new Recommendation.PatternRecommendation(
+                    "Error",
+                    "N/A",
+                    "Error parsing response: " + ex.getMessage()
+                )
+            ));
         }
-
-
     }
     private String getGeminiResponse(String prompt) {
         try {
-            System.out.println("Using Gemini API Key:" + geminiApiKey);
-            System.out.println("Gemini API prompt is: " + prompt);
             URL url = new URL("https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=" + geminiApiKey);
-            System.out.println("Gemini API url is: " + url);
             HttpURLConnection con = (HttpURLConnection) url.openConnection();
             con.setRequestMethod("POST");
             con.setRequestProperty("Content-Type", "application/json");
-            System.out.println("Connection headers are set.");
             con.setDoOutput(true);
 
-
-            // Using ObjectMapper to create JSON payload
+            // Create request body
             ObjectMapper mapper = new ObjectMapper();
-            Map<String, Object> jsonMap = new HashMap<>();
-            List<Map<String, Object>> contents = new ArrayList<>();
+            Map<String, Object> requestBody = new HashMap<>();
             Map<String, Object> content = new HashMap<>();
-            List<Map<String,String>> parts = new ArrayList<>();
             Map<String, String> part = new HashMap<>();
+            
             part.put("text", prompt);
-            parts.add(part);
-            content.put("parts",parts);
-            contents.add(content);
-            jsonMap.put("contents",contents);
+            content.put("parts", Collections.singletonList(part));
+            requestBody.put("contents", Collections.singletonList(content));
 
+            String jsonInputString = mapper.writeValueAsString(requestBody);
 
-            String jsonInputString = mapper.writeValueAsString(jsonMap);
-
-
-            System.out.println("Gemini API json is: " + jsonInputString);
+            // Send request
             try(OutputStream os = con.getOutputStream()) {
                 byte[] input = jsonInputString.getBytes(StandardCharsets.UTF_8);
                 os.write(input, 0, input.length);
-                System.out.println("JSON was written successfully to the output stream");
             }
 
+            // Read response
             StringBuilder response = new StringBuilder();
-            System.out.println("Reading response from Gemini");
             try(BufferedReader br = new BufferedReader(new InputStreamReader(con.getInputStream(), StandardCharsets.UTF_8))) {
                 String responseLine;
                 while ((responseLine = br.readLine()) != null) {
                     response.append(responseLine.trim());
                 }
             }
-            System.out.println("Response read from gemini api : " + response);
-            JsonNode jsonNode = mapper.readTree(response.toString());
-            System.out.println("Json node is " + jsonNode.toString());
-            String text = jsonNode.get("candidates").get(0).get("content").get("parts").get(0).get("text").asText();
 
-            String patternName = extractDesignPattern(text);
-            return patternName;
+            // Parse Gemini response
+            JsonNode jsonNode = mapper.readTree(response.toString());
+            String geminiText = jsonNode.get("candidates").get(0).get("content").get("parts").get(0).get("text").asText();
+            
+            // Clean and format the response
+            return formatGeminiResponse(geminiText);
 
         } catch (IOException e) {
-            System.out.println("Error while generating AI response: " + e.getMessage());
-            return "Error: Unable to generate response from Gemini API.";
+            e.printStackTrace();
+            return createErrorResponse(e.getMessage());
+        }
+    }
+
+    private String formatGeminiResponse(String geminiText) {
+        try {
+            // Create a structured response
+            Map<String, Object> response = new HashMap<>();
+            List<Map<String, String>> patterns = new ArrayList<>();
+
+            // Create a single pattern entry
+            Map<String, String> pattern = new HashMap<>();
+            pattern.put("patternName", "Design Pattern Analysis");
+            pattern.put("codeSnippet", "See explanation for code examples");
+            pattern.put("explanation", geminiText.replaceAll("```[^`]*```", "")  // Remove code blocks
+                                              .replaceAll("`[^`]*`", "")         // Remove inline code
+                                              .replaceAll("\n", " ")             // Remove newlines
+                                              .trim());
+
+            patterns.add(pattern);
+            response.put("designPatterns", patterns);
+
+            // Convert to JSON string
+            return new ObjectMapper().writeValueAsString(response);
+        } catch (Exception e) {
+            return createErrorResponse("Error formatting response: " + e.getMessage());
+        }
+    }
+
+    private String createErrorResponse(String errorMessage) {
+        try {
+            Map<String, Object> response = new HashMap<>();
+            List<Map<String, String>> patterns = new ArrayList<>();
+            Map<String, String> pattern = new HashMap<>();
+            
+            pattern.put("patternName", "Error");
+            pattern.put("codeSnippet", "N/A");
+            pattern.put("explanation", errorMessage);
+            
+            patterns.add(pattern);
+            response.put("designPatterns", patterns);
+            
+            return new ObjectMapper().writeValueAsString(response);
+        } catch (JsonProcessingException e) {
+            return "{\"designPatterns\":[{\"patternName\":\"Error\",\"codeSnippet\":\"N/A\",\"explanation\":\"Failed to create error response\"}]}";
         }
     }
 
@@ -150,21 +204,21 @@ public class RecommendationServiceImpl implements RecommendationService {
 
     }
 
-    private List<String> getRecommendedPatternsBasedOnInteractions(String userId){
-        List<String> userInteractions = userPatternInteractions.getOrDefault(userId,new ArrayList<>());
-        if(userInteractions.isEmpty()){
-            return Arrays.asList("1","2","3"); // default if no interaction
+    private List<String> getRecommendedPatternsBasedOnInteractions(String userId) {
+        List<String> userInteractions = userPatternInteractions.getOrDefault(userId, new ArrayList<>());
+        if(userInteractions.isEmpty()) {
+            return Arrays.asList("1", "2", "3"); // default if no interaction
         }
 
         // Example logic to generate recommendation based on interactions
-        Map<String,Integer> patternCount = new HashMap<>();
-        for(String patternId: userInteractions){
-            patternCount.put(patternId, patternCount.getOrDefault(patternId,0)+1);
+        Map<String, Integer> patternCount = new HashMap<>();
+        for(String patternId: userInteractions) {
+            patternCount.put(patternId, patternCount.getOrDefault(patternId, 0) + 1);
         }
-        List<String> sortedPatterns = patternCount.entrySet().stream()
-                .sorted(Map.Entry.<String,Integer>comparingByValue().reversed())
+        
+        return patternCount.entrySet().stream()
+                .sorted(Map.Entry.<String, Integer>comparingByValue().reversed())
                 .map(Map.Entry::getKey)
-                .toList();
-        return sortedPatterns;
+                .collect(Collectors.toList());
     }
 }
